<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red" >

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginLeft="14dp"
            android:background="@null"
            android:onClick="onBack"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:gravity="center"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightblue"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="11dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/tokens"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/costTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/costTokens"
            android:layout_alignRight="@+id/costTokens"
            android:layout_marginBottom="13dp"
            android:gravity="right"
            android:text="@string/buycost"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/monthly_pass"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_marginBottom="14dp"
            android:text="@string/donate_forward"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/costTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/total"
            android:layout_alignBottom="@+id/total"
            android:layout_alignLeft="@+id/costTickets"
            android:layout_alignRight="@+id/buyWithPaypal"
            android:gravity="right"
            android:text="@string/buycost"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="61dp"
            android:text="@string/total"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="64dp"
            android:layout_toLeftOf="@+id/textView2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/coin_pass_it" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="63dp"
            android:layout_toLeftOf="@+id/textView2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ticket" />

        <Button
            android:id="@+id/buyWithPaypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/paypalblue"
            android:onClick="onBuy"
            android:padding="10dp"
            android:text="@string/pay_with_paypal"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buyWithPaypal"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/coin" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/buytickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/ticketsNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/ticketsYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/buyforward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/forwardNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/forwardYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
        </RadioGroup>

        <TextView
            android:id="@+id/costDonateForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/costTotal"
            android:layout_alignRight="@+id/costTickets"
            android:gravity="right"
            android:text="@string/buycost"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/costTokens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignRight="@+id/buyWithPaypal"
            android:layout_toRightOf="@+id/buytickets"
            android:gravity="right"
            android:text="@string/buycost"
            android:textSize="24sp" />

    </RelativeLayout>

</LinearLayout>