<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red" >

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@null"
            android:onClick="onClick"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/info_result" >

        <TextView
            android:id="@+id/timeOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView1"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="62dp"
            android:layout_toRightOf="@+id/timeIn"
            android:text="@string/timeout"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timeOut"
            android:layout_alignBottom="@+id/timeOut"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/timein"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timeOut"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginBottom="39dp"
            android:text="@string/date"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="207dp"
            android:layout_marginLeft="49dp"
            android:text="@string/station2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nextTrainDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_toRightOf="@+id/timeIn"
            android:text="@string/next_train_direction"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nextTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="22dp"
            android:layout_toRightOf="@+id/timeIn"
            android:text="@string/timein"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>